# ollie-reader

./: .env.development  .env.example  .env.production  .firebaserc  .gitignore  AGENTS.md  Makefile  README.md  eslint.config.js  firebase.json  index.html  package-lock.json  package.json  progress.md  tailwind.config.js  vite.config.ts
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
desktop/: .gitignore  README.md  main.py  ollie-reader-desktop.spec  pyproject.toml  requirements-dev.txt  requirements.txt
desktop/release/: make_icon.sh  package_macos.sh  release_github.sh  verify_bundle.py  version.py
desktop/server/: app.py  config.py  fetch_url.py  instance.py  model_download.py  models.py  oikid.py  oikid_secrets.py  pdf_extract.py  ssl_compat.py  tts_chatterbox.py  tts_chatterbox_mlx.py  tts_kokoro.py  tts_piper.py
desktop/shell/: app.py  autostart.py  sidecar.py  single_instance.py
desktop/tests/: conftest.py  test_app.py  test_app_model_download.py  test_autostart.py  test_config.py  test_fetch_url.py  test_instance.py  test_main_serve.py  test_model_download.py  test_oikid.py  test_oikid_secrets.py  test_pdf_extract.py  test_shell_app.py  test_sidecar.py  test_single_instance.py  test_tts_chatterbox.py  test_tts_chatterbox_mlx.py  test_tts_kokoro.py  test_tts_piper.py  test_verify_bundle.py  test_version.py
docs/superpowers/plans/: 2026-06-02-lookup-panel-improvements.md  2026-06-19-connection-mode.md  2026-06-19-desktop-app.md  2026-06-19-vocabulary-master-detail-redesign.md  2026-06-20-port-little-games.md  2026-06-21-desktop-dmg-release.md  2026-06-21-fetch-url-desktop-sidecar.md  2026-06-21-oikid-booking-records-desktop-sidecar.md  2026-06-21-storage-client-direct-supabase.md  2026-06-22-wonder-academy-rpg.md  2026-06-23-wonder-academy-battle-session.md  2026-06-23-wonder-academy-combat-catch-core.md  2026-06-23-wonder-academy-exploration-encounters.md  2026-06-23-wonder-academy-progression-evolution.md  2026-06-23-wonder-academy-wonderdex.md  2026-06-29-desktop-dev-model-autodownload.md  2026-06-30-wonder-academy-audio-settings-sync.md  2026-06-30-wonder-academy-battle-loadout-repair.md  2026-06-30-wonder-academy-battle-move-guard.md  2026-06-30-wonder-academy-browser-smoke-script.md  2026-06-30-wonder-academy-builder-field-skill-preview.md  2026-06-30-wonder-academy-catch-snack-consumption.md  2026-06-30-wonder-academy-creature-field-skills.md  2026-06-30-wonder-academy-custom-element-migration.md  2026-06-30-wonder-academy-custom-field-skill-migration.md  2026-06-30-wonder-academy-custom-move-migration.md  2026-06-30-wonder-academy-daily-reward-save-migration.md  2026-06-30-wonder-academy-daily-save-migration.md  2026-06-30-wonder-academy-dex-save-migration.md  2026-06-30-wonder-academy-economy-save-migration.md  2026-06-30-wonder-academy-effectiveness-labels.md  2026-06-30-wonder-academy-entry-reset-safeguards.md  2026-06-30-wonder-academy-equipped-move-repair.md  2026-06-30-wonder-academy-field-skill-node-gating.md  2026-06-30-wonder-academy-guest-save-status.md  2026-06-30-wonder-academy-invalid-custom-field-skill.md  2026-06-30-wonder-academy-local-cache-requeue.md  2026-06-30-wonder-academy-locked-node-hints.md  2026-06-30-wonder-academy-move-loadout-guards.md  (+16 more)
public/: manifest.json
scripts/: crop_exam_images.py  fetch-transcripts.mjs  generate-wonder-academy-audio.mjs  make-sweetheart-audio.mjs  make-sweetheart-sprites.mjs  smoke-wonder-academy.mjs  wonder-academy-smoke-helpers.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: PdfReader.tsx
src/constants/: achievements.ts  api.ts  chapters.ts  gachaPool.ts  sceneThemes.ts
src/contexts/: AuthContextType.ts  PdfContext.tsx  SettingsContext.tsx  SettingsContextType.ts  SpeechContext.tsx  SpeechContextType.ts  ThemeContext.tsx  ThemeContextType.ts  auth.test.tsx  auth.tsx
src/data/: travelScenes.ts  travelTopics.ts  wonderAcademyData.test.ts  wonderAcademyData.ts  wonderAcademyMoves.test.ts  wonderAcademyMoves.ts
src/hooks/: useAdventure.ts  useAsyncState.ts  useAudioRecorder.ts  useAudioUploads.ts  useAuth.ts  useBookingRecords.ts  useChat.ts  useDebounce.ts  useExamQuiz.test.tsx  useExamQuiz.ts  useFloatingPanel.ts  useGachaMissRate.ts  useLookupQueue.ts  useMagicBattle.ts  useMediaQuery.ts  usePdfState.ts  usePdfUpload.ts  usePdfWorker.ts  usePracticeTimer.ts  usePronunciation.ts  useScriptGenerator.ts  useSentencePractice.ts  useSentenceTranslation.ts  useSettings.ts  useShowAllGachaEntries.ts  useShowSubtitles.ts  useSpeech.ts  useSpeechPractice.ts  useSpeechState.ts  useSpeeches.ts  useTextSelection.ts  useTheme.ts  useToastQueue.ts  useTravelProgress.ts  useVocabulary.test.tsx  useVocabulary.ts  useVocabularySearch.ts  useWarmServer.ts
src/services/: aiService.ts  audioStorageService.ts  audioUploadService.ts  economyService.test.ts  economyService.ts  gachaPreferences.test.ts  gachaPreferences.ts  gameProgressService.test.ts  gameProgressService.ts  gameService.ts  gameStages.test.ts  gameWords.ts  localBackend.ts  pdfSessionCache.ts  sentencePracticeService.ts  sentenceTranslationService.ts  settingsService.test.ts  settingsService.ts  showSubtitlesService.ts  speechPracticeService.ts  speechService.ts  spiritEvolution.test.ts  spiritEvolution.ts  travelProgressService.ts  ttsCache.ts  vocabularyService.ts  wonderAcademyProgressService.test.ts  wonderAcademyProgressService.ts
src/types/: audioUpload.ts  chat.ts  exam.ts  game.ts  oikid.ts  pdf.ts  sentencePractice.ts  sentenceTranslation.ts  settings.ts  showSubtitles.ts  speech-recognition.d.ts  speechPractice.ts  travelEnglish.ts  vocabulary.ts  wonder-academy-smoke-helpers.d.ts  wonderAcademy.ts
src/utils/: apiUtil.ts  arrayUtils.ts  chunkErrors.ts  errorUtils.ts  externalAssistant.ts  firebaseUtil.ts  gameTabs.ts  lazyWithReload.ts  logger.ts  pdfConfig.ts  registerPwa.ts  supabaseClient.ts  textUtils.ts  translateFactory.ts  unifiedFeed.test.ts  unifiedFeed.ts
tests/: externalAssistant.test.ts  monsterAcademy.test.ts  travelMissions.test.ts  wordRunner.test.ts
(+457 files in other folders)
