[project]
name = "ollie-reader-desktop"
version = "0.1.0"
description = "Ollie Reader desktop shell: PySide6 tray + local FastAPI sidecar (Piper/Kokoro TTS, PDF extraction)"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "starlette>=1.3.1",
    "python-multipart",
    "uvicorn[standard]",
    "pymupdf",
    "piper-tts",
    "soundfile",
    "numpy",
    # Kokoro via ONNX Runtime (no PyTorch). Pulls onnxruntime + phonemizer-fork
    # + espeakng-loader for G2P. Model/voices files live in models/ (bundled).
    "kokoro-onnx",
    "PySide6",
    # outbound HTTP client for /api/fetch-url (URL proxy, e.g. remote PDFs).
    "httpx",
    "keyring",
]

[dependency-groups]
dev = [
    "pytest",
    "pyinstaller",
]

# This is a run-from-source app (main.py + server/ + shell/), not an installable
# distribution, so uv manages only the environment — it does not build the project.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
